backport: re PR tree-optimization/26969 (ICE with -O1 -funswitch-loops -ftree-vectorize)

Backport from mainline:
        2006-08-07  Victor Kaplansky <victork@il.ibm.com>

        PR tree-optimization/26969
        * tree-vect-analyze.c (vect_analyze_loop_form): Add check of latch
        with an empty list of PHIs.

From-SVN: r117883